<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DotDash Keyboard</string>
    <string name="caps_lock_off">caps</string>
    <string name="caps_lock_next">Caps</string>
    <string name="caps_lock_all">CAPS</string>
    <string name="tapforpunctuation">Tap for punctuation</string>
    <string name="tapforlettersandnumbers">Tap for letters and numbers</string>
    <string name="settings_title">Settings for DotDash Keyboard</string>
    
    <string name="autocap">Auto-capitalize</string>
    <string name="autocap_summary">Automatically capitalize the first word in each sentence.</string>
    <string name="newline">Carriage return</string>
    <string name="newline_summary">Morse code group to use for carriage return</string>
	<string name="enableutilkbd">Enable utility keyboard (experimental)</string>
	<string name="enableutilkbd_summary">Enable the utility keyboard. Swipe left or right to access it. It may still be a little buggy.</string>
	<string name="enter">Enter</string>
    <string name="newline_disabled">disabled</string>
    <string name="ditdahchars">Dot/Dash display characters</string>
    <string name="ditdahchars_summary">DotDash uses Unicode characters to display the Morse code
        dots and dashes on the space bar and in the cheat sheet. If these do not display properly
        on your phone, you can switch to displaying ASCII characters instead.</string>
    
    <string name="android_keyboard_settings">Keyboard Settings</string>
    <string name="android_keyboard_debug_settings">Keyboard Debug Settings</string>
</resources>